2003-09-06  Gregory John Casamento <greg_casamento@yahoo.com>

	* Images/common_Printer.tiff 
	* Images/common_ToolbarSeperatorItem.tiff
	* Images/common_ToolbarShowColorsItem.tiff 
	* Images/common_ToolbarShowFontsItem.tiff
	* Images/common_ToolbarSpaceItem.tiff 
	* Source/NSToolbarItem.m: set the correct images and
	target/action information for all of the standard toolbar items.

2003-09-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuItem.m
	Autorelease the [separatorItem].
	
2003-09-06  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSMenuView.m
	In [itemChanged:] set if the cell is enabled like the item.
	* Source/NSMenuItemCell.m
	[setMenuItem:] enable/disable cell. [drawTitleWithFrame:inView:]no
	longer enable/disable cell.
	
2003-09-04 18:43  Alexander Malmberg <alexander@malmberg.org>

	* Headers/AppKit/NSWindow.h, Source/NSWindow.m: Change the return
	type of	-initWithWindowRef: to id.

2003-09-02  Adam Fedor  <fedor@gnu.org>

	* Tools/gsnd/gsnd.m (main): Don't mess with file descriptors on MinGW.

2003-09-02  Adam Fedor  <fedor@gnu.org>

	* Source/libgnustep-gui.def: Update.

2003-09-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSAttributedString.m
	[readFromURL:options:documentAttributes:] corrected the handling
	to type "text", where [NSString alloc] was missing.
	* Source/NSBundleAdditions.m
	Removed unused global currentVersion.
	* Headers/AppKit/NSCell.h
	Corrected type of method _nonAutoreleasedTypingAttributes
	* Headers/AppKit/NSInputManager.h
	Added protocol NSTextInput to ivar _currentClient.
	* Headers/AppKit/NSTextFieldCell.h
	Removed uneeded and inconsistent method declarations.
	* Source/NSApplciation.m
	* Source/NSBezierPath.m
	* Source/NSClipView.m
	* Source/NSDocumentController.m
	* Source/NSInputManager.m
	* Source/NSMenuItem.m
	* Source/NSSavePanel.m
	* Source/NSTableView.m
	Removed new GCC 3.4 warnings from Alexander Malmbergs list.
	
2003-09-01  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSBitmapImageRep.m