@@ -1,3 +1,8 @@
+2003-09-06 22:53  Alexander Malmberg <alexander@malmberg.org>
+
+	* Source/NSFont.m (getNSFont): Set the explicit-size bit in the
+	role correctly.
+
 2003-09-06  Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Images/common_Printer.tiff 
